--- a/main.css
+++ b/main.css
@@ -4,22 +4,23 @@
     grid-template-rows: auto;
     grid-template-areas:
             "header header header"
-            "headerSec headerMin headerHour"
+            "headerSec headerSec headerSec"
+            "headerMin headerHour headerDay"
             "lastSec lastMin lastHour";
     margin: auto;
     width: 300px;
 }
 
-.header {
-    grid-area: header;
-    text-align: center;
-    font-size: 30px;
-}
-
 .headerSec {
     grid-area: headerSec;
-    width: 33.3%;
+}
+
+.header {
+    grid-area: header;
+}
+.header,.headerSec{
     text-align: center;
+    font-size: 30px;
 }
 
 .headerMin {
@@ -30,6 +31,12 @@
 
 .headerHour {
     grid-area: headerHour;
+    width: 33.3%;
+    text-align: center;
+}
+
+.headerDay {
+    grid-area: headerDay;
     width: 33.3%;
     text-align: center;
 }
