--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     grid-template-rows: auto;
     grid-template-areas:
             "header header header"
-            ". headerSec ."
+            "nothing headerSec nothing"
             "headerMin headerHour headerDay"
             "lastSec lastMin lastHour";
     margin: auto;
