--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     grid-template-rows: auto;
     grid-template-areas:
             "header header header"
-            "nothing lastSec nothing"
+            "lastSec lastSec lastSec"
             "headerMin headerHour headerDay"
             "lastHour lastDay lastDay";
     margin: auto;
