--- a/main.css
+++ b/main.css
@@ -1,7 +1,9 @@
 .hashContainer {
     display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+
+
     grid-template-areas:
             "header header header"
             "lastSec lastSec lastSec"
