--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 .hashcontainer {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    align-items: stretch;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     grid-template-areas:
             "title title title"
             "lastsec lastsec lastsec"
@@ -22,6 +23,11 @@
 
 .headerday {  grid-area: headerday;  }
 .lastday {  grid-area: lastday;  }
+
+.griditem {
+    display: flex;
+    align-items: center;
+}
 
 .third {  width: 33.3%;  }
 
